<resources>
    <string name="app_name">Patient Flow</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_registry">Registro</string>
    <string name="current_date">dd/mm/yyyy - hh:mm:ss</string>
    <string name="patient">Paciente</string>
    <string name="weight">Peso</string>
    <string name="systolic_pressure">Presión Sistólica</string>
    <string name="diastolic_pressure">Presión Diastólica</string>
    <string name="temperature">Temperatura</string>
    <string name="checkbox_surgery">¿Cirugía actual?</string>
    <string name="self_medication">Automedicación</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="from">Desde</string>
    <string name="to">Hasta</string>
    <string name="name">Nombre</string>
    <string name="status">Estado</string>
    <string name="surnames">Apellidos</string>
    <string name="phone_number">Teléfono</string>
    <string name="birthdate">Fecha de nacimiento</string>
    <string name="take_photo">Tomar foto</string>
    <string name="add_patient">Agregar paciente</string>
    <string name="menu_patients">Pacientes</string>
    <string name="menu_queries">Consultas</string>
    <string name="illnesses_or_allergies">Enfermedades o alergias</string>
    <string name="from_to">Desde / Hasta</string>
    <string name="update_patient">Actualizar paciente</string>
    <string name="recommendations">Recomendaciones</string>
    <string name="medicines">Medicamentos</string>
    <string name="action_about">Acerca de mí</string>
    <string name="treat_patient">Atender paciente</string>
</resources>