<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_queries">

    <fragment
        android:id="@+id/nav_queries"
        android:name="com.dercide.patientflow.ui.queries.QueriesFragment"
        android:label="@string/menu_queries"
        tools:layout="@layout/fragment_queries" />

    <fragment
        android:id="@+id/nav_registry"
        android:name="com.dercide.patientflow.ui.registry.RegistryFragment"
        android:label="@string/menu_registry"
        tools:layout="@layout/fragment_registry" />

    <fragment
        android:id="@+id/nav_patients"
        android:name="com.dercide.patientflow.ui.patient.PatientsFragment"
        android:label="@string/menu_patients"
        tools:layout="@layout/fragment_patients" />

</navigation>