<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.registry.RegistryFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <TextView
            android:id="@+id/tvDateTimeRegistry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_date"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPatientRegistry"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/patient"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_search"
                android:layout_marginBottom="15dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/actvPatientRegistry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnAddPatientRegistry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="add"
                android:layout_marginStart="10dp"
                app:icon="@drawable/ic_add"
                style="@style/Widget.MaterialComponents.Button.Icon" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilWeightRegistry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_balance"
            android:layout_marginBottom="15dp"
            app:counterEnabled="true"
            app:counterMaxLength="6">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="15dp"
            android:gravity="center">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilSystolicPressureRegistry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/systolic_pressure"
                app:endIconMode="custom"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                app:counterEnabled="true"
                app:counterMaxLength="3">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="/"
                tools:ignore="HardcodedText" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDiastolicPressureRegistry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/diastolic_pressure"
                app:endIconMode="custom"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                app:counterEnabled="true"
                app:counterMaxLength="3">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTemperatureRegistry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/temperature"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_whatshot"
            android:layout_marginBottom="15dp"
            app:counterEnabled="true"
            app:counterMaxLength="8">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cbSurgeryRegistry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            app:useMaterialThemeColors="true"
            android:text="@string/checkbox_surgery"
            android:layout_marginBottom="15dp"
            android:textSize="20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSelfMedicationRegistry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/self_medication"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_medical"
            android:layout_marginBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="3"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilIllnessesOrAllergiesRegistry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/illnesses_or_allergies"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_medical"
            android:layout_marginBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="3"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegisterRegistry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_registry"
            android:layout_marginBottom="50dp"
            style="@style/Widget.MaterialComponents.Button" />
    </LinearLayout>

</ScrollView>