<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    app:cardCornerRadius="4dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvNameQueryCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/tvSurnamesQueryCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/surnames"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end">
            <ImageView
                android:id="@+id/ivEditQueryCard"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_exit"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:id="@+id/tvStatusQueryCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>