<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.attend.AttendActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/tvNameAttend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="Nombre Apellidos"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edad:"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/tvAgeAttend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/tvPhoneAttend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="000 000 0000"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/tvWeightAttend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="0 kg"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Presion:"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/tvPressureAttend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="0/0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/tvTemperatureAttend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="0 °"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkbox_surgery"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/tvSurgeryAttend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="No"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/self_medication"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/tvSelfMedicationAttend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="Ninguna"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/illnesses_or_allergies"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/tvIllnessesOrAllergiesAttend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="Ninguna"/>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRecommendationsAttend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recommendations"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_edit_note"
            android:layout_marginBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="3"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMedicinesAttend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/medicines"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_edit_note"
            android:layout_marginBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="3"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnAltaAttend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Dar alta"/>
    </LinearLayout>

</ScrollView>